infra/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandboxkit
  namespace: sandboxes
  labels:
    app: sandboxkit
spec:
  selector:
    app: sandboxkit
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  type: ClusterIP
